@@ -9,7 +9,7 @@ class views_handler_field_taxonomy extends views_handler_field {
   /**
    * Constructor to provide additional field to add.
    *
-   * This constructer assumes the term_data table. If using another
+   * This constructer assumes the taxonomy_term_data table. If using another
    * table, we'll need to be more specific.
    */
   function construct() {
